# Fugle

./: .env.example  .gitignore  README.md  config.default.toml  pyproject.toml  requirements-cutout.txt  requirements.txt
assets/: bird_image_candidates.json
assets/birds/: masks.json
prompts/: bird_image_prompt.txt
src/fuglestation/: __init__.py  analyze_audio.py  audio_clips.py  build_bird_masks.py  build_year_round_candidates.py  cutout_birds.py  danish_species_names.json  database.py  ebird.py  generate_bird_images.py  list_detections.py  record_audio.py  run_cycle.py  run_scheduler.py  species_names.py  station_status.py  update_danish_species_names.py  web.py
src/fuglestation/static/: app.js  index.html  species_stats.html  species_stats.js  stats.css  stats.html  stats.js  styles.css  wall.css  wall.html  wall.js
